--- a/index.html
+++ b/index.html
@@ -4,10 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style.css">
-    <link rel="shortcut icon" href="image/favicon/favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" sizes="180x180" href="image/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="image/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="image/favicon/favicon-16x16.png">
+    <link rel="manifest" href="image/favicon/site.webmanifest">
     <title>Fabio Brum</title>
 </head>
 <body>
-    <p>Olá Mundo!</p>
+
+    <div class="container">
+        <header>
+            <div class="img-wrapper">
+                <img src="image/bg_header.jpg" alt="">
+                    <div class="banner">
+                    <h1>Web Developer & Front End Designer</h1>
+                    <p>Fabio Brum</p>
+                    <button>Saiba mais</button>
+                    </div>
+            </div>
+            
+            
+        </header>
+
+    </div>
+
 </body>
 </html>
