--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="img-wrapper">
                 <img src="image/bg_header.jpg" alt="">
                     <div class="banner">
-                    <h1>Web Developer & Front End Designer</h1>
+                    <h1>Desenvolvedor Web & Front End Designer</h1>
                     <p>Fabio Brum</p>
                     <button>Saiba mais</button>
                     </div>
