--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </div>
             </header>
 
-            <div class="sidebar">
+            <aside class="sidebar">
                 <nav>
                     <ul class="menu">
                         <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
@@ -49,7 +49,69 @@
                     <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
 
                 </div>
-            </div>
+            </aside>
+
+            <section class="sessao-conhecimento">
+                <div class="sessao-header">
+                    <h1>Habilidades profissionais</h1>
+                </div>
+                <div class="conhecimentos">
+                    <div class="conhecimento">
+                        <div class="conhecimento-header">
+                            <i class="fa-brands fa-html5"></i>
+                            <h3>HTML</h3>
+                        </div>
+                        <div class="conhecimento-text">
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto vel quisquam nihil et ut. Est facere dolorem at pariatur molestiae fugit excepturi id ipsa, vero veniam animi, asperiores nihil dolorum?</p>
+                        </div>
+                    </div>
+                    <div class="conhecimento">
+                        <div class="conhecimento-header">
+                            <i class="fa-brands fa-css3-alt"></i>
+                            <h3>CSS3</h3>
+                        </div>
+                        <div class="conhecimento-text">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel atque et ipsa sed! Repellat earum quae modi pariatur aspernatur, reprehenderit vitae impedit laboriosam, incidunt dolores quisquam blanditiis amet ea error.</p>
+                        </div>
+                    </div>
+                    <div class="conhecimento">
+                        <div class="conhecimento-header">
+                            <i class="fa-solid fa-pencil"></i>
+                            <h3>Design</h3>
+                        </div>
+                        <div class="conhecimento-text">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi facere aliquid assumenda placeat omnis dicta quod cupiditate in esse explicabo dolorem, nihil mollitia ipsam consequatur corporis commodi laborum rem et.</p>
+                        </div>
+                    </div>
+                    <div class="conhecimento">
+                        <div class="conhecimento-header">
+                            <i class="fa-brands fa-js"></i>
+                            <h3>JavaScript</h3>
+                        </div>
+                        <div class="conhecimento-text">
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus, aliquam. Quam sequi debitis deleniti, a aspernatur eum alias provident? Maxime impedit fugiat facere accusantium hic libero quidem quis placeat enim?</p>
+                        </div>
+                    </div>
+                    <div class="conhecimento">
+                        <div class="conhecimento-header">
+                            <i class="fa-brands fa-github"></i>
+                            <h3>Git e GitHub</h3>
+                        </div>
+                        <div class="conhecimento-text">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, quo maxime. Eligendi rerum sunt, iste explicabo reiciendis ullam aliquid totam, odit consectetur minima illum quidem deserunt harum minus. Numquam, officia?</p>
+                        </div>
+                    </div>
+                    <div class="conhecimento">
+                        <div class="conhecimento-header">
+                            <i class="fa-brands fa-wordpress"></i>
+                            <h3>Wordpress</h3>
+                        </div>
+                        <div class="conhecimento-text">
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos itaque enim praesentium magni reprehenderit sit repudiandae laudantium est, eius beatae, sunt optio delectus tempore ea dicta, vero ipsam voluptatibus. Fugiat?</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
 
         </div>
 
