:package: Habilidades profissionais
Finalizando a configuração da seção de habilidades profissionais quanto a posicionamento

--- a/index.html
+++ b/index.html
@@ -110,6 +110,9 @@
                             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos itaque enim praesentium magni reprehenderit sit repudiandae laudantium est, eius beatae, sunt optio delectus tempore ea dicta, vero ipsam voluptatibus. Fugiat?</p>
                         </div>
                     </div>
+                    <div class="conhecimento-img-wrapper">
+                        <img src="image/img-wrapper.png" alt="Habilidades profissionais">
+                    </div>
                 </div>
             </section>
 
