--- a/index.html
+++ b/index.html
@@ -116,6 +116,75 @@
                 </div>
             </section>
 
+            <section class="sessao-projetos">
+                <div class="sessao-header">
+                    <h1>Projetos desenvolvidos</h1>
+                </div>
+                <div class="projetos">
+                    <div class="card">
+                        <div class="card-img-wrapper">
+                            <img src="image/proj-1.jpg" alt="Imagem do site wordpress'">
+                        </div>
+                        <div class="card-info">
+                            <h2>Imobiliária v.1</h2>
+                            <h3>Wordpress</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, animi! Saepe eligendi id assumenda eveniet quaerat earum nisi culpa eos atque voluptas! Expedita nulla obcaecati molestias, repellat commodi ipsum consequatur!</p>
+                            <button class="btn">Saiba mais</button>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-img-wrapper">
+                            <img src="image/proj-2.jpg" alt="Imagem do site portfólio">
+                        </div>
+                        <div class="card-info">
+                            <h2>Portfólio pessoal</h2>
+                            <h3>HTML, CSS, JS</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, animi! Saepe eligendi id assumenda eveniet quaerat earum nisi culpa eos atque voluptas! Expedita nulla obcaecati molestias, repellat commodi ipsum consequatur!</p>
+                            <button class="btn">Saiba mais</button>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-img-wrapper">
+                            <img src="image/proj-3.jpg" alt="Imagem da edição de foto e filmagem">
+                        </div>
+                        <div class="card-info">
+                            <h2>Foto & Filmagem</h2>
+                            <h3>Edição de imagens</h3>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos eaque hic illo at cupiditate natus, reiciendis animi consequuntur. Repellat consectetur officia aspernatur quia laudantium. Odit, molestias at? Quibusdam, eius sint.</p>
+                            <button class="btn">Saiba mais</button>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="sessao-contato">
+                <div class="contato-wrapper">
+                    <div class="contato-left"></div>
+                    <div class="contato-right">
+                        <h1>Contato</h1>
+                        <form action="">
+                            <div class="input-group">
+                                <input type="text" class="field" id="nome">
+                                <label for="nome" class="field-label">Nome</label>
+                            </div>
+                            <div class="input-group">
+                                <input type="text" class="field" id="celular">
+                                <label for="celular" class="field-label">Celular</label>
+                            </div>
+                            <div class="input-group">
+                                <input type="text" class="field" id="email">
+                                <label for="email" class="field-label">E-mail</label>
+                            </div>
+                            <div class="input-group">
+                                <textarea class="field" id="mensagem"></textarea>
+                                <label for="mensagem" class="field-label">Mensagem</label>
+                            </div>
+                            <button type="submit" class="btn btn-submit">Enviar</button>
+                        </form>
+                    </div>
+                </div>
+            </section>
+
         </div>
 
     </body>
