:package: Formulário de contato e footer
Montamos o backend do formulário de contato e o footer do site.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
 
 
-            <header>
+            <header id="home">
                 <div class="img-wrapper">
                     <img src="image/bg_header.jpg" alt="">
                         <div class="banner">
@@ -36,11 +36,11 @@
             <aside class="sidebar">
                 <nav>
                     <ul class="menu">
-                        <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
-                        <li class="menu-item"><a href="#" class="menu-link">Conhecimento</a></li>
-                        <li class="menu-item"><a href="#" class="menu-link">Projetos</a></li>
-                        <li class="menu-item"><a href="#" class="menu-link">Desenvolvimento</a></li>
-                        <li class="menu-item"><a href="#" class="menu-link">Contato</a></li>
+                        <li class="menu-item"><a href="#home" class="menu-link">Home</a></li>
+                        <li class="menu-item"><a href="#conhecimento" class="menu-link">Conhecimento</a></li>
+                        <li class="menu-item"><a href="#projetos" class="menu-link">Projetos</a></li>
+                        <li class="menu-item"><a href="#desenvolvimento" class="menu-link">Desenvolvimento</a></li>
+                        <li class="menu-item"><a href="#contato" class="menu-link">Contato</a></li>
                     </ul>
                 </nav>
                 <div class="social-media">                
@@ -51,7 +51,7 @@
                 </div>
             </aside>
 
-            <section class="sessao-conhecimento">
+            <section class="sessao-conhecimento" id="conhecimento">
                 <div class="sessao-header">
                     <h1>Habilidades profissionais</h1>
                 </div>
@@ -116,7 +116,7 @@
                 </div>
             </section>
 
-            <section class="sessao-projetos">
+            <section class="sessao-projetos" id="projetos">
                 <div class="sessao-header">
                     <h1>Projetos desenvolvidos</h1>
                 </div>
@@ -157,7 +157,7 @@
                 </div>
             </section>
 
-            <section class="sessao-contato">
+            <section class="sessao-contato" id="contato">
                 <div class="contato-wrapper">
                     <div class="contato-left"></div>
                     <div class="contato-right">
@@ -185,8 +185,27 @@
                 </div>
             </section>
 
+            <footer>
+                <div class="footer-content">
+                    <div class="footer-logo">
+                        <img src="image/logo_site.jpg" alt="Logomarca do site">
+                    </div>
+                    <p>
+                        Copyright &copy; 2023, Fabio Brum - Todos os direitos reservados.
+                    </p>
+                    <div class="footer-social">
+                        <ul>
+                            <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-github"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-whatsapp"></i></a></li>
+                        </ul>                        
+                    </div>
+                </div>
+            </footer>
+            <a href="#home" id="link-topo">
+                <i class="fa-solid fa-circle-up"></i>
+            </a>
         </div>
-
     </body>
     
     <script src="script.js"></script>
