Configurações de Media Query
Iniciando a configuração da responsividade do site.
Foi feito ajustes no formulário de contato.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style/style.css">
+        <link rel="stylesheet" href="style/media_query.css">        
         <link rel="apple-touch-icon" sizes="180x180" href="image/favicon/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="image/favicon/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="image/favicon/favicon-16x16.png">
@@ -37,7 +38,7 @@
                 <nav>
                     <ul class="menu">
                         <li class="menu-item"><a href="#home" class="menu-link">Home</a></li>
-                        <li class="menu-item"><a href="#conhecimento" class="menu-link">Conhecimento</a></li>
+                        <li class="menu-item"><a href="#conhecimento" class="menu-link">Habilidades</a></li>
                         <li class="menu-item"><a href="#projetos" class="menu-link">Projetos</a></li>
                         <li class="menu-item"><a href="#desenvolvimento" class="menu-link">Desenvolvimento</a></li>
                         <li class="menu-item"><a href="#contato" class="menu-link">Contato</a></li>
@@ -168,8 +169,8 @@
                                 <label for="nome" class="field-label">Nome</label>
                             </div>
                             <div class="input-group">
-                                <input type="text" class="field" id="celular">
-                                <label for="celular" class="field-label">Celular</label>
+                                <input type="text" class="field" id="telefone">
+                                <label for="telefone" class="field-label">Telefone</label>
                             </div>
                             <div class="input-group">
                                 <input type="text" class="field" id="email">
@@ -208,5 +209,7 @@
         </div>
     </body>
     
-    <script src="script.js"></script>
-</html>
+    <script src="js/script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
+    <script src="js/jquery.mask.js"></script>
+    </html>
