:package: Media Query
Foi criado e configurado a responsividade para celular, tab e pc.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style/style.css">
-        <link rel="stylesheet" href="style/media_query.css">        
+        <link rel="stylesheet" href="style/media_query_1251.css">
+        <link rel="stylesheet" href="style/media_query_701_1250.css">
+        <link rel="stylesheet" href="style/media_query_320_700.css">        
         <link rel="apple-touch-icon" sizes="180x180" href="image/favicon/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="image/favicon/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="image/favicon/favicon-16x16.png">
@@ -187,21 +188,26 @@
             </section>
 
             <footer>
-                <div class="footer-content">
-                    <div class="footer-logo">
-                        <img src="image/logo_site.jpg" alt="Logomarca do site">
+                <section class="footer-section">
+                    <div class="footer-content">
+                        <div class="footer-logo">
+                            <img src="image/logo_site.jpg" alt="Logomarca do site">
+                    
+                        </div>
+                        <div class="footer-copyright">
+                            <p>
+                            Copyright &copy; 2023, Fabio Brum - Todos os direitos reservados. Contato: (67) 99983-2324
+                            </p>
+                        </div>
+                        <div class="footer-social">
+                            <ul>
+                                <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                                <li><a href="#"><i class="fa-brands fa-github"></i></a></li>
+                                <li><a href="#"><i class="fa-brands fa-whatsapp"></i></a></li>
+                            </ul>
+                        </div>
                     </div>
-                    <p>
-                        Copyright &copy; 2023, Fabio Brum - Todos os direitos reservados.
-                    </p>
-                    <div class="footer-social">
-                        <ul>
-                            <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-                            <li><a href="#"><i class="fa-brands fa-github"></i></a></li>
-                            <li><a href="#"><i class="fa-brands fa-whatsapp"></i></a></li>
-                        </ul>                        
-                    </div>
-                </div>
+                </section>
             </footer>
             <a href="#home" id="link-topo">
                 <i class="fa-solid fa-circle-up"></i>
