🐛Correção de erros de digitação
Correção de erros de digitação.

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                             <h3>Wordpress</h3>
                         </div>
                         <div class="conhecimento-text">
-                            <p>Com uma programação versátil o Wordpress oeferece soluções rápidas proporcionando varias opçoes de configuração do projeto, desde uma jagina web até formulários e aplicações elaboradas.</p>
+                            <p>Com uma programação versátil o Wordpress oferece soluções rápidas proporcionando varias opçoes de configuração do projeto, desde uma jagina web até formulários e aplicações elaboradas.</p>
                         </div>
                     </div>
                     <div class="conhecimento-img-wrapper">
