:package: Formulário de envio
Configurando o formulário de envio e a pagina de confirmação do envio

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style/style.css">
         <link rel="stylesheet" href="style/media_query_1141.css">
         <link rel="stylesheet" href="style/media_query_701_1140.css">
         <link rel="stylesheet" href="style/media_query_320_700.css">                
@@ -21,7 +22,7 @@
                         <div class="banner">
                             <h1>Desenvolvedor Web & Front End Designer</h1>
                             <p>Fabio Brum</p>
-                            <button>Saiba mais</button>
+                            <button><a href="#conhecimento">Saiba mais</a></button>
                         </div>
                 </div>
                                    
@@ -161,13 +162,13 @@
                     <div class="contato-left"></div>
                     <div class="contato-right">
                         <h1>Contato</h1>
-                        <form action="https://formsubmit.co/fabinhobrum@gmail.com" method="POST">
+                        <form action="https://api.staticforms.xyz/submit" method="POST">
                             <div class="input-group">
                                 <input type="text" name="name" class="field" id="nome" required>
                                 <label for="nome" class="field-label">Nome</label>
                             </div>
                             <div class="input-group">
-                                <input type="text" name="telefone" class="field" id="telefone" required>
+                                <input type="text" name="phone" class="field" id="telefone" required>
                                 <label for="telefone" class="field-label">Telefone</label>
                             </div>
                             <div class="input-group">
@@ -179,7 +180,8 @@
                                 <label for="mensagem" class="field-label">Mensagem</label>
                             </div>
                             <button type="submit" class="btn btn-submit">Enviar</button>
-                            <input type="hidden" name="_captcha" value="false">
+                            <input type="hidden" name="accessKey" value="3c5028c1-68eb-4bd6-b917-c39561cd63de">
+                            <input type="hidden" name="redirectTo" value="">
                         </form>
                     </div>
                 </div>
