--- a/confirmacao-de-envio.html
+++ b/confirmacao-de-envio.html
@@ -11,7 +11,6 @@
         <title>Fabio Brum</title>
     </head>
     <body>
-
         <div class="container">            
             <header id="home">                
                 <div class="img-wrapper">
@@ -83,4 +82,9 @@
     <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
     <script src="js/script.js"></script>    
     <script src="js/jquery.mask.js"></script>
+    <script>
+        setTimeout(function() { 
+            window.location.href = "http://127.0.0.1:5500/index.html";
+        }, 5000);
+    </script>
     </html>
