--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                             </div>
                             <button type="submit" class="btn btn-submit">Enviar</button>
                             <input type="hidden" name="accessKey" value="3c5028c1-68eb-4bd6-b917-c39561cd63de">
-                            <input type="hidden" name="redirectTo" value="">
+                            <input type="hidden" name="redirectTo" value="http://127.0.0.1:5500/confirmacao-de-envio.html">
                         </form>
                     </div>
                 </div>
