:package: Formulario de contato
Configurando a responsividade para varias telas

--- a/confirmacao-de-envio.html
+++ b/confirmacao-de-envio.html
@@ -82,9 +82,7 @@
     <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
     <script src="js/script.js"></script>    
     <script src="js/jquery.mask.js"></script>
-    <script>
-        setTimeout(function() { 
-            window.location.href = "http://127.0.0.1:5500/index.html";
-        }, 5000);
-    </script>
+    <!--<script>
+        window.onload = redirecionar();
+    </script>-->
     </html>
