:package: Confirmação de envio
Pagina de confirmação de envio finalizada. E foi feita algumas adequações de alinhamento na pagina index.

--- a/confirmacao-de-envio.html
+++ b/confirmacao-de-envio.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style/style.css">
+        <link rel="stylesheet" href="style/confirm_envio.css">
         <link rel="apple-touch-icon" sizes="180x180" href="image/favicon/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="image/favicon/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="image/favicon/favicon-16x16.png">
@@ -33,14 +33,13 @@
                             <li class="menu-item"><a href="/index.html" class="menu-link">Home</a></li>
                             <li class="menu-item"><a href="/index.html#conhecimento" class="menu-link">Habilidades</a></li>
                             <li class="menu-item"><a href="/index.html#projetos" class="menu-link">Projetos</a></li>
-                            <li class="menu-item"><a href="/index.html#desenvolvimento" class="menu-link">Desenvolvimento</a></li>
                             <li class="menu-item"><a href="/index.html#contato" class="menu-link">Contato</a></li>
                         </ul>
                     </nav>
                     <div class="social-media">
-                        <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                        <a href="#"><i class="fa-brands fa-github"></i></a>
-                        <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
+                        <a href="https://www.instagram.com/fabinhobrum/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="https://github.com/fabinhobrum" target="_blank"><i class="fa-brands fa-github"></i></a>
+                        <a href="https://wa.me/+5567999832324" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
                     </div>
                 </aside>                
             </header>
@@ -60,15 +59,16 @@
                     
                         </div>
                         <div class="footer-copyright">
-                            <p>
-                            Copyright &copy; 2023, Fabio Brum - Todos os direitos reservados. Contato: (67) 99983-2324
-                            </p>
+                            <p>Copyright &copy; 2023, Fabio Brum - Todos os direitos reservados. 
+                            <p>e-mail: <a href="mailto:fabinhobrum@gmail.com">fabinhobrum@gmail.com</a></p>
+                            <p> Contato: <a href="tel:+55 67 99983-2324">(67) 99983-2324</a></p> 
+                            </p>    
                         </div>
                         <div class="footer-social">
                             <ul>
-                                <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-                                <li><a href="#"><i class="fa-brands fa-github"></i></a></li>
-                                <li><a href="#"><i class="fa-brands fa-whatsapp"></i></a></li>
+                                <li><a href="https://www.instagram.com/fabinhobrum/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+                                <li><a href="https://github.com/fabinhobrum" target="_blank"><i class="fa-brands fa-github"></i></a></li>
+                                <li><a href="https://wa.me/+5567999832324" target="_blank"><i class="fa-brands fa-whatsapp"></i></a></li>
                             </ul>
                         </div>
                     </div>
@@ -82,7 +82,7 @@
     <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
     <script src="js/script.js"></script>    
     <script src="js/jquery.mask.js"></script>
-    <!--<script>
+    <script>
         window.onload = redirecionar();
-    </script>-->
+    </script>
     </html>
