--- a/index.html
+++ b/index.html
@@ -35,17 +35,16 @@
                     </div>
                     <nav>
                         <ul class="menu">
-                            <li class="menu-item"><a href="#home" class="menu-link">Home</a></li>
-                            <li class="menu-item"><a href="#conhecimento" class="menu-link">Habilidades</a></li>
-                            <li class="menu-item"><a href="#projetos" class="menu-link">Projetos</a></li>
-                            <li class="menu-item"><a href="#desenvolvimento" class="menu-link">Desenvolvimento</a></li>
-                            <li class="menu-item"><a href="#contato" class="menu-link">Contato</a></li>
+                            <li class="menu-item"><a href="/index.html" class="menu-link">Home</a></li>
+                            <li class="menu-item"><a href="/index.html#conhecimento" class="menu-link">Habilidades</a></li>
+                            <li class="menu-item"><a href="/index.html#projetos" class="menu-link">Projetos</a></li>
+                            <li class="menu-item"><a href="/index.html#contato" class="menu-link">Contato</a></li>
                         </ul>
                     </nav>
                     <div class="social-media">
-                        <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                        <a href="#"><i class="fa-brands fa-github"></i></a>
-                        <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
+                        <a href="https://www.instagram.com/fabinhobrum/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="https://github.com/fabinhobrum" target="_blank"><i class="fa-brands fa-github"></i></a>
+                        <a href="https://wa.me/+5567999832324" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
                     </div>
                 </aside>
                 
@@ -195,15 +194,16 @@
                     
                         </div>
                         <div class="footer-copyright">
-                            <p>
-                            Copyright &copy; 2023, Fabio Brum - Todos os direitos reservados. Contato: (67) 99983-2324
-                            </p>
+                            <p>Copyright &copy; 2023, Fabio Brum - Todos os direitos reservados. 
+                            <p>e-mail: <a href="mailto:fabinhobrum@gmail.com">fabinhobrum@gmail.com</a></p>
+                            <p> Contato: <a href="tel:+55 67 99983-2324">(67) 99983-2324</a></p> 
+                            </p>                            
                         </div>
                         <div class="footer-social">
                             <ul>
-                                <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-                                <li><a href="#"><i class="fa-brands fa-github"></i></a></li>
-                                <li><a href="#"><i class="fa-brands fa-whatsapp"></i></a></li>
+                                <li><a href="https://www.instagram.com/fabinhobrum/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+                                <li><a href="https://github.com/fabinhobrum" target="_blank"><i class="fa-brands fa-github"></i></a></li>
+                                <li><a href="https://wa.me/+5567999832324" target="_blank"><i class="fa-brands fa-whatsapp"></i></a></li>
                             </ul>
                         </div>
                     </div>
